---
config:
  class:
    hideEmptyMembersBox: true
---
classDiagram
    class PDFFormFiller {
        <<interface>>
        +fillForm(application, template) ResultAsync~Buffer, PDFError~
        +validateTemplate(templatePath) Result~PDFFieldInfo[], PDFError~
    }

    class StandardPDFFormFiller {
        +fillForm(application, template) ResultAsync~Buffer, PDFError~
        +validateTemplate(templatePath) Result~PDFFieldInfo[], PDFError~
        -extractFields(pdfPath) PDFFieldInfo[]
        -mapApplicationData(application, mappings) Record~string, any~
    }

    class PDFFieldInfo {
        +string fieldName
        +string fieldType
        +boolean required
    }

    class PDFError {
        +string message
        +string code
        +string templatePath?
    }

    PDFFormFiller <|-- StandardPDFFormFiller
    StandardPDFFormFiller --> PDFFieldInfo : uses
    StandardPDFFormFiller --> PDFError : throws
    PDFTemplate --> PDFFormFiller : processed_by
